@@ -1,5 +1,4 @@
-<p><br />
-producing the below table:</p>
+<p>producing the below table:</p>
 <table border="5" cellspacing="5" cellpadding="2">
 <tr>
 <td style="text-align: center;">text</td>
