@@ -1,5 +1,4 @@
 <!-- test div followed by table. -->
-
 <div align="center">center-aligned div content</div>
 
 {| align="center"
